--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Harry Potter App</title>
+    <style>
+      body{
+        background-image: url(https://images6.alphacoders.com/853/thumb-1920-853375.png); 
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-color: #020512;
+      }
+      
+    </style>
   </head>
-  <body style="background-image: url(https://images6.alphacoders.com/853/thumb-1920-853375.png); 
-  background-size: 100% 100%; background-attachment: fixed; ">
+  <body >
     
     <div id="root"></div>
     <!--
