--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
         background-repeat: no-repeat;
         background-color: #020512;
       }
+      @media (max-width: 1000px){
+        body{
+          background-size: 180vw auto;
+        }
+        
+      }
       
     </style>
   </head>
