--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,11 @@
         background-repeat: no-repeat;
         background-color: #020512;
       }
-      @media (max-width: 1000px){
+      @media (max-width: 700px){
         body{
-          background-size: 180vw auto;
+          background-image: none;
+          background-color: #020512;
+          
         }
         
       }
