--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </style>
   </head>
   <body >
-    
+    <audio src="song.mp3" autoplay id="home_music"></audio>
     <div id="root"></div>
     <!--
       This HTML file is a template.
